...
    @IBOutlet weak var collectionView: UICollectionView!
    var categoryViewModel = CategoriesViewModel()
    var selectedCategory = String()
    var selectedCategoryIndex = IndexPath()
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = NSLocalizedString("Retail Store", comment: "")
    }
    override func viewWillAppear(_ animated: Bool) {
        // Fetching the category list from the Json file
         categoryViewModel.getCategories()
    }
    @IBAction func cartButtonTapped(_ sender: Any) {
...
