...
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_electronics" translatesAutoresizingMaskIntoConstraints="NO" id="Cyy-DU-6aA">
                                                    <rect key="frame" x="165" y="24" width="148" height="84"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="84" id="yMD-4o-8RQ"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Electronics" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CxK-2p-DXn">
                                                    <rect key="frame" x="15" y="64" width="148" height="21"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="21" id="Byz-Oq-qGh"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name="HelveticaNeue-BoldItalic" family="Helvetica Neue" pointSize="17"/>
                                                    <nil key="textColor"/>
...
